Aggiunte foto servizi + fix a swagger e vari
