# swagger.json
@@ -92,10 +92,10 @@
                         "required": false
                     },
                     {
-                        "name": "URLfoto",
+                        "name": "foto",
                         "in": "formData",
-                        "description": "Percorso della foto profilo del nuovo utente",
-                        "type": "string",
+                        "description": "Foto profilo del nuovo utente, quadrata ed in formato .png",
+                        "type": "file",
                         "required": false
                     }
                 ],
@@ -238,7 +238,7 @@
                         "required": false
                     },
                     {
-                        "name": "token",
+                        "name": "x-access-token",
                         "in": "header",
                         "description": "Token di accesso dell'utente",
                         "type": "string",
@@ -288,7 +288,7 @@
                         "required": true
                     },
                     {
-                        "name": "token",
+                        "name": "x-access-token",
                         "in": "header",
                         "description": "Token di accesso dell'utente",
                         "type": "string",
@@ -335,7 +335,7 @@
                         "required": true
                     },
                     {
-                        "name": "token",
+                        "name": "x-access-token",
                         "in": "header",
                         "description": "Token di accesso dell'utente",
                         "type": "string",
@@ -382,7 +382,7 @@
                         "required": true
                     },
                     {
-                        "name": "token",
+                        "name": "x-access-token",
                         "in": "header",
                         "description": "Token di accesso dell'utente",
                         "type": "string",
@@ -415,7 +415,7 @@
                         "description": "Password dell'utente",
                         "type": "string",
                         "format": "password",
-                        "required": true
+                        "required": false
                     },
                     {
                         "name": "telefono",
@@ -432,17 +432,28 @@
                         "required": false
                     },
                     {
-                        "name": "URLfoto",
+                        "name": "foto",
                         "in": "formData",
-                        "description": "Percorso della foto profilo dell'utente",
-                        "type": "string",
+                        "description": "Nuova foto profilo dell'utente, quadrata ed in formato .png",
+                        "type": "file",
                         "required": false
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK - Modifica dell'utente effettuata correttamente",
-                        "schema": { "$ref": "#/definitions/Utente" }
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "utente": {
+                                    "$ref": "#/definitions/Utente"
+                                },
+                                "token": {
+                                    "type": "string",
+                                    "description": "Nuovo token dell'utente"
+                                }
+                            }
+                        }
                     },
                     "400": {
                         "description": "Bad request - I parametri richiesti non sono specificati"
@@ -477,7 +488,7 @@
                         "required": true
                     },
                     {
-                        "name": "token",
+                        "name": "x-access-token",
                         "in": "header",
                         "description": "Token di accesso dell'utente",
                         "type": "string",
@@ -531,7 +542,7 @@
                 "produces": ["application/json"],
                 "parameters": [
                     {
-                        "name": "token",
+                        "name": "x-access-token",
                         "in": "header",
                         "description": "Token di accesso dell'utente",
                         "type": "string",
@@ -556,11 +567,7 @@
                         "in": "formData",
                         "description": "Tipo di spazio",
                         "type": "string",
-                        "enum": [
-                            "Locale interno",
-                            "Locale attrezzato",
-                            "Spazio esterno"
-                        ],
+                        "enum": ["Locale interno", "Locale attrezzato", "Spazio esterno"],
                         "required": true
                     },
                     {
@@ -704,7 +711,7 @@
                     {
                         "name": "inizio",
                         "in": "query",
-                        "description": "Data di inizio del periodo",
+                        "description": "Data di inizio del periodo in formato date-time",
                         "type": "string",
                         "format": "date-time",
                         "required": true
@@ -712,7 +719,7 @@
                     {
                         "name": "fine",
                         "in": "query",
-                        "description": "Data di fine del periodo",
+                        "description": "Data di fine del periodo in formato date-time",
                         "type": "string",
                         "format": "date-time",
                         "required": true
@@ -771,7 +778,7 @@
                         "required": true
                     },
                     {
-                        "name": "token",
+                        "name": "x-access-token",
                         "in": "header",
                         "description": "Token di accesso dell'utente",
                         "type": "string",
@@ -796,11 +803,7 @@
                         "in": "formData",
                         "description": "Tipo di spazio",
                         "type": "string",
-                        "enum": [
-                            "Locale interno",
-                            "Locale attrezzato",
-                            "Spazio esterno"
-                        ],
+                        "enum": ["Locale interno", "Locale attrezzato", "Spazio esterno"],
                         "required": true
                     },
                     {
@@ -870,7 +873,7 @@
                         "required": true
                     },
                     {
-                        "name": "token",
+                        "name": "x-access-token",
                         "in": "header",
                         "description": "Token di accesso dell'utente",
                         "type": "string",
@@ -924,7 +927,7 @@
                 "produces": ["application/json"],
                 "parameters": [
                     {
-                        "name": "token",
+                        "name": "x-access-token",
                         "in": "header",
                         "description": "Token di accesso dell'utente",
                         "type": "string",
@@ -949,11 +952,7 @@
                         "in": "formData",
                         "description": "Tipo di servizio",
                         "type": "string",
-                        "enum": [
-                            "Arredamento",
-                            "Attrezzatura specifica",
-                            "Altro"
-                        ],
+                        "enum": ["Arredamento", "Attrezzatura specifica", "Altro"],
                         "required": true
                     },
                     {
@@ -1092,7 +1091,7 @@
                     {
                         "name": "inizio",
                         "in": "query",
-                        "description": "Data di inizio del periodo",
+                        "description": "Data di inizio del periodo in formato date-time",
                         "type": "string",
                         "format": "date-time",
                         "required": true
@@ -1100,7 +1099,7 @@
                     {
                         "name": "fine",
                         "in": "query",
-                        "description": "Data di fine del periodo",
+                        "description": "Data di fine del periodo in formato date-time",
                         "type": "string",
                         "format": "date-time",
                         "required": true
@@ -1159,7 +1158,7 @@
                         "required": true
                     },
                     {
-                        "name": "token",
+                        "name": "x-access-token",
                         "in": "header",
                         "description": "Token di accesso dell'utente",
                         "type": "string",
@@ -1184,11 +1183,7 @@
                         "in": "formData",
                         "description": "Tipo di servizio",
                         "type": "string",
-                        "enum": [
-                            "Arredamento",
-                            "Attrezzatura specifica",
-                            "Altro"
-                        ],
+                        "enum": ["Arredamento", "Attrezzatura specifica", "Altro"],
                         "required": true
                     },
                     {
@@ -1250,7 +1245,7 @@
                         "required": true
                     },
                     {
-                        "name": "token",
+                        "name": "x-access-token",
                         "in": "header",
                         "description": "Token di accesso dell'utente",
                         "type": "string",
@@ -1304,7 +1299,7 @@
                 "produces": ["application/json"],
                 "parameters": [
                     {
-                        "name": "token",
+                        "name": "x-access-token",
                         "in": "header",
                         "description": "Token di accesso dell'utente",
                         "type": "string",
@@ -1394,7 +1389,7 @@
                         "required": true
                     },
                     {
-                        "name": "token",
+                        "name": "x-access-token",
                         "in": "header",
                         "description": "Token di accesso dell'utente",
                         "type": "string",
@@ -1438,7 +1433,7 @@
                         "required": true
                     },
                     {
-                        "name": "token",
+                        "name": "x-access-token",
                         "in": "header",
                         "description": "Token di accesso dell'utente",
                         "type": "string",
@@ -1482,7 +1477,7 @@
                         "required": true
                     },
                     {
-                        "name": "token",
+                        "name": "x-access-token",
                         "in": "header",
                         "description": "Token di accesso dell'utente",
                         "type": "string",
@@ -1529,7 +1524,7 @@
                         "required": true
                     },
                     {
-                        "name": "token",
+                        "name": "x-access-token",
                         "in": "header",
                         "description": "Token di accesso dell'utente",
                         "type": "string",
@@ -1634,7 +1629,7 @@
                         "required": true
                     },
                     {
-                        "name": "token",
+                        "name": "x-access-token",
                         "in": "header",
                         "description": "Token di accesso dell'utente",
                         "type": "string",
@@ -1678,7 +1673,7 @@
                         "required": true
                     },
                     {
-                        "name": "token",
+                        "name": "x-access-token",
                         "in": "header",
                         "description": "Token di accesso dell'utente",
                         "type": "string",
@@ -1731,7 +1726,7 @@
                         "required": true
                     },
                     {
-                        "name": "token",
+                        "name": "x-access-token",
                         "in": "header",
                         "description": "Token di accesso dell'utente",
                         "type": "string",
@@ -1778,7 +1773,7 @@
                         "required": true
                     },
                     {
-                        "name": "token",
+                        "name": "x-access-token",
                         "in": "header",
                         "description": "Token di accesso dell'utente",
                         "type": "string",
@@ -1855,7 +1850,7 @@
                         "required": true
                     },
                     {
-                        "name": "token",
+                        "name": "x-access-token",
                         "in": "header",
                         "description": "Token di accesso dell'utente",
                         "type": "string",
@@ -1886,14 +1881,7 @@
     "definitions": {
         "Utente": {
             "type": "object",
-            "required": [
-                "_id",
-                "nome",
-                "cognome",
-                "email",
-                "confermaAccount",
-                "livello"
-            ],
+            "required": ["_id", "nome", "cognome", "email", "confermaAccount", "livello"],
             "properties": {
                 "_id": {
                     "type": "string",
@@ -1932,7 +1920,7 @@
                 "URLfoto": {
                     "type": "string",
                     "description": "Percorso della foto profilo dell'utente",
-                    "example": "images/utenti/default.png"
+                    "example": "/images/utenti/default.png"
                 },
                 "confermaAccount": {
                     "type": "boolean",
@@ -1948,13 +1936,7 @@
         },
         "Spazio": {
             "type": "object",
-            "required": [
-                "_id",
-                "nome",
-                "tipologia",
-                "prezzoIniziale",
-                "prezzoOra"
-            ],
+            "required": ["_id", "nome", "tipologia", "prezzoIniziale", "prezzoOra"],
             "properties": {
                 "_id": {
                     "type": "string",
@@ -1973,11 +1955,7 @@
                 "tipologia": {
                     "type": "string",
                     "description": "Tipo di spazio",
-                    "enum": [
-                        "Locale interno",
-                        "Locale attrezzato",
-                        "Spazio esterno"
-                    ],
+                    "enum": ["Locale interno", "Locale attrezzato", "Spazio esterno"],
                     "example": "Locale interno"
                 },
                 "prezzoIniziale": {
@@ -1995,25 +1973,19 @@
                 "URLfoto": {
                     "type": "string",
                     "description": "Percorso della foto dello spazio",
-                    "example": "images/spazi/default.png"
+                    "example": "/images/spazi/default.png"
                 },
                 "servizi": {
                     "type": "array",
-                    "description": "Lista di ID dei servizi che possono essere utilizzati in questo spazio",
-                    "items": { "type": "string" },
+                    "description": "Lista dei servizi che possono essere utilizzati in questo spazio",
+                    "items": { "$ref": "#/definitions/Servizio" },
                     "required": false
                 }
             }
         },
         "Servizio": {
             "type": "object",
-            "required": [
-                "_id",
-                "nome",
-                "tipologia",
-                "prezzoIniziale",
-                "prezzoOra"
-            ],
+            "required": ["_id", "nome", "tipologia", "prezzoIniziale", "prezzoOra"],
             "properties": {
                 "_id": {
                     "type": "string",
@@ -2050,7 +2022,7 @@
                 "URLfoto": {
                     "type": "string",
                     "description": "Percorso della foto del servizio",
-                    "example": "images/servizi/default.png"
+                    "example": "/images/servizi/default.png"
                 }
             }
         },
